[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medkit-sdk"
version = "3.0.0"
description = "A unified Python SDK for public medical APIs (OpenFDA, PubMed, ClinicalTrials.gov)"
readme = "README.md"
authors = [
    { name = "interestng", email = "dev@interestng.com" }
]
requires-python = ">=3.9"
dependencies = [
    "httpx[http2]>=0.25.0",
    "pydantic>=2.4.0",
    "typer>=0.9.0",
    "rich>=13.6.0",
    "structlog>=23.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "black>=23.9.1",
    "mypy>=1.6.0"
]

[project.scripts]
medkit = "medkit.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["medkit"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
fixable = ["ALL"]
